# task

./: .env  Cargo.toml
src/: main.rs  types.rs
src/backupDb/: data.json
src/config/: chainConfig.rs  datastoreConfig.rs  marketConfig.rs  mod.rs
src/lib/: getMarketPool.rs  getSingleMarketData.rs  mod.rs  useMarkets.rs  useSingleMarket.rs  useTokensDataRequest.rs
src/model/: mod.rs  token.rs
src/types/: types.rs
src/utils/: getContracts.rs  getToken.rs  getTokenPrice.rs  hash.rs  helpers.rs  marketDataUtils.rs  marketEnabled.rs  mod.rs  multicall.rs  tokenDataForPools.rs
src/utils/abi/: DataStore.json  DynamicMarket.json  MarketReader.json  SingleMarket.json  Token.json
