[package]
name = "rust-pool-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6", features = ["full"] }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.1"
serde_json = "1.0.140"
eyre = "0.6.12"
thiserror = "2.0.12"
async-trait = "0.1.88"
alloy-primitives = "0.8.25"
alloy-sol-types = "0.8.25"
reqwest = { version = "0.11", features = ["json"] }
alloy-multicall = "0.12.4"
